--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CosmicSail - Backend</title>
+    <title>CosmicSail • Backend</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@700&display=swap');
@@ -20,8 +20,11 @@
     <div class="text-center mb-12">
       <img src="/logo.svg" class="h-56 mb-2" alt="CosmicSailLogo">
       <h1 class="text-4xl dosis font-bold">Cosmic<span class="deepOrange">Sail</span></h1>
-      <p class="uppercase font-semibold tracking-wide -mt-3 mb-6 text-gray-600 text-sm">backend</p>
-      <a class="px-2 py-2 rounded-lg bg-gray-200 hover:bg-gray-300" href="https://github.com/Adwirawien/CosmicSail">Github</a>
+      <p style="margin-bottom: 1.75rem" class="uppercase font-semibold tracking-wide -mt-3 text-gray-600 text-sm">backend</p>
+      <a class="px-4 py-2 rounded bg-gray-200 hover:bg-black hover:text-white hover:shadow-xl transition-all duration-200"
+        href="https://github.com/Adwirawien/CosmicSail">
+        🐙 Github
+      </a>
     </div>
   </body>
 </html>
