Start implementing auth

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -21,7 +21,7 @@
       <img src="/logo.svg" class="h-56 mb-2" alt="CosmicSailLogo">
       <h1 class="text-4xl dosis font-bold">Cosmic<span class="deepOrange">Sail</span></h1>
       <p style="margin-bottom: 1.75rem" class="uppercase font-semibold tracking-wide -mt-3 text-gray-600 text-sm">backend</p>
-      <a class="px-4 py-2 rounded bg-gray-200 hover:bg-black hover:text-white hover:shadow-xl transition-all duration-200"
+      <a class="px-4 py-2 rounded bg-gray-200 hover:bg-black hover:text-white hover:shadow-lg transition-all duration-200"
         href="https://github.com/Adwirawien/CosmicSail">
         🐙 Github
       </a>
