Update boat control view

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,8 @@
 
     <script defer src="/bundle.js"></script>
 
-
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css' rel='stylesheet' />
 
   </head>
 
