Add rounded corners to map

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,6 +32,11 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css' rel='stylesheet' />
 
+    <style>
+      .mapboxgl-canvas {
+        border-radius: 0.5rem;
+      }
+    </style>
   </head>
 
   <body class="bg-gray-100 dark:bg-gray-800 transition-bg duration-200 min-h-screen">
