--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,8 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="stylesheet" href="/slider.css" />
+
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/bundle.css" />
 
