--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="/slider.css" />
+    <link rel="stylesheet" href="/styles.css" />
 
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/bundle.css" />
@@ -48,7 +49,7 @@
           <h1 class="text-4xl">🙃</h1>
           <p class="italic text-gray-700 dark:text-gray-500">Please enable Javascript</p>
         </div>
-      <div>
+      </div>
     </noscript>
   </body>
 </html>
