--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -18,12 +18,12 @@
         }
     </style>
 </head>
-<body class="w-screen h-screen flex justify-center items-center">
+<body class="w-screen h-screen bg-gray-900 flex justify-center items-center">
 <div class="text-center mb-12">
     <img src="/Beach.svg" class="h-56 mb-2" alt="CosmicSailLogo">
-    <h1 class="text-4xl dosis font-bold">Cosmic<span class="deepOrange">Sail</span></h1>
-    <p style="margin-bottom: 1.75rem" class="uppercase font-semibold tracking-wide -mt-3 text-gray-600 text-sm">
-        backend</p>
+    <h1 class="text-4xl text-white dosis font-bold">Cosmic<span class="deepOrange">Sail</span></h1>
+    <p style="margin-bottom: 1.75rem" class="uppercase font-semibold tracking-wide -mt-3 text-gray-400 text-sm">
+        rudder</p>
     <a class="px-4 py-2 rounded bg-gray-200 hover:bg-black hover:text-white hover:shadow-lg transition-all duration-200"
        href="https://github.com/Adwirawien/CosmicSail">
         🐙 Github
