--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,7 +17,7 @@
 
     <title>Waterway • CosmicSail</title>
   </head>
-  <body>
+  <body class="bg-gray-100 dark:bg-black">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
