--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
 
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css" rel="stylesheet"/>
 </head>
-<body class="bg-gray-100 dark:bg-black">
+<body class="bg-gray-100 dark:bg-gray-900">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
